# atomicshop

./: .gitignore  CreateWheel.cmd  History.md  LICENSE  LICENSE.txt  PyPIupload.cmd  ReadMe.md  Setup in Edit mode.cmd  pyproject.toml
Utils/: CreateWheel and clean.cmd  GitCreate branch.cmd  GitUpload Forked.cmd  GitUpload.cmd  PyPIupload.cmd  Setup.cmd  deprecated functions.txt
Utils/helper/: GitUpload.cmd  Setup No Extra Folders.cmd  Setup in Edit mode.cmd  SetupDevModeHere.cmd  SetupPackage.cmd
atomicshop/: __init__.py  _basics_temp.py  _create_pdf_demo.py  _patch_import.py  appointment_management.py  archiver.py  certificates.py  command_line_processing.py  config_init.py  console_output.py  console_user_response.py  consoles.py  datetimes.py  diff_check.py  dns.py  domains.py  emails.py  exceptions.py  file_io.py  file_types.py  filesystem.py  functions.py  get_process_list.py  get_process_name_cmd_dll.py  github_wrapper.py  hashing.py  http_parse.py  inspect_wrapper.py  ip_addresses.py  keyboard_press.py  list_of_dicts.py  logger_custom.py  networks.py  on_exit.py  package_mains_processor.py  pbtkmultifile_argparse.py  permissions.py  print_api.py  process.py  process_name_cmd.py  (+24 more)
atomicshop/a_installs/: pywintrace.py
atomicshop/a_installs/ubuntu/: docker_rootless.py  docker_sudo.py  elastic_search_and_kibana.py  mongodb.py  nodejs.py  pycharm.py
atomicshop/a_installs/win/: mongodb.py  nodejs.py  pycharm.py  robocorp.py  wsl_ubuntu_lts.py
atomicshop/a_mains/: dns_gateway_setting.py  get_local_tcp_ports.py  github_wrapper.py  install_ca_certificate.py  msi_unpacker.py  process_from_port.py  set_default_dns_gateway.py  update_config_toml.py
atomicshop/a_mains/FACT/: update_extract.py
atomicshop/addons/: PlayWrightCodegen.cmd  ScriptExecution.cmd
atomicshop/addons/a_setup_scripts/: install_psycopg2_ubuntu.sh
atomicshop/addons/mains/: factw_fact_extractor_docker_image_main_with_sudo.py  install_docker_ubuntu_main_sudo.py  install_fibratus_windows.py  install_wsl_ubuntu_lts_admin.py  msi_unpacker.py  search_for_hyperlinks_in_docx.py
atomicshop/addons/package_setup/: CreateWheel.cmd  Setup in Edit mode.cmd
atomicshop/addons/post_setup/: install_pywintrace_0.3.cmd
atomicshop/addons/process_list/: ReadMe.txt  compile.cmd  process_list.cpp
atomicshop/archiver/: _search_in_zip.py  search_in_archive.py  sevenz.py  sevenz_app_w.py  sevenzs.py  shutils.py  zip.py  zips.py
atomicshop/basics/: ansi_escape_codes.py  argparse_template.py  atexits.py  booleans.py  bytes_arrays.py  classes.py  dicts.py  dicts_nested.py  enumerations.py  enums.py  exceptions.py  guids.py  hexs.py  if_else.py  isinstancing.py  list_of_classes.py  list_of_dicts.py  lists.py  multiprocesses.py  numbers.py  package_module.py  randoms.py  strings.py  threads.py  timeit_template.py  tracebacks.py
atomicshop/clones/certauth/: certauth.py
atomicshop/diff_check/: diff_check.py
atomicshop/etw/: dns_trace.py  etw.py  sessions.py  trace.py  trace_dns.py
atomicshop/etws/: _pywintrace_fix.py  const.py  providers.py  sessions.py  trace.py
atomicshop/etws/traces/: trace_dns.py  trace_sysmon_process_creation.py  trace_tcp.py
atomicshop/file_io/: csvs.py  docxs.py  file_io.py  jsons.py  tomls.py  xlsxs.py  xmls.py
atomicshop/mains/installs/: pycharm.py
atomicshop/mitm/: centered_settings.py  config_editor.py  config_static.py  config_toml_editor.py  connection_thread_worker.py  import_config.py  initialize_engines.py  initialize_mitm_server.py  message.py  mitm_main.py  pcap_worker.py  recs_files.py  shared_functions.py  ssh_broker.py  ssh_tester.py  statistic_analyzer.py
atomicshop/mitm/engines/: create_module_template.py  create_module_template_example.py  create_module_template_main_example.py
atomicshop/mitm/statistic_analyzer_helper/: analyzer_helper.py  moving_average_helper.py
atomicshop/monitor/: change_monitor.py
atomicshop/monitor/checks/: dns.py  file.py  hash.py  network.py  process_running.py  url.py
atomicshop/permissions/: ubuntu_permissions.py  win_permissions.py
atomicshop/process_poller/: process_pool.py  simple_process_pool.py  tracer_base.py
atomicshop/process_poller/pollers/: psutil_pywin32wmi_dll.py
atomicshop/process_poller/tracers/: event_log.py  sysmon_etw.py
atomicshop/sockets/: dns_server.py  receiver.py  sender.py  socket_client.py  socket_server_tester.py  socket_wrapper.py
atomicshop/ssh_scripts/: process_from_ipv4.py  process_from_port.py
atomicshop/startup/win/: startup_folder.py  task_scheduler.py
atomicshop/web_apis/: google_custom_search.py  google_llm.py
atomicshop/wrappers/: _process_wrapper_curl.py  astw.py  certauthw.py  configparserw.py  cryptographyw.py  ffmpegw.py  githubw.py  msiw.py  netshw.py  numpyw.py  olefilew.py  pipw.py  powershell_networking.py  process_wrapper_pbtk.py  process_wrapper_tar.py  psutilw.py  pycharmw.py  pyopensslw.py  sysmonw.py  ubuntu_terminal.py  win_auditw.py  wslw.py
atomicshop/wrappers/certauthw/: certauth.py  certauthw.py
atomicshop/wrappers/ctyping/: file_details_winapi.py  process_winapi.py  setup_device.py  win_console.py
atomicshop/wrappers/dockerw/: dockerw.py  install_docker.py
atomicshop/wrappers/elasticsearchw/: config_basic.py  elastic_infra.py  elasticsearchw.py  infrastructure.py  install_elastic.py  queries.py
atomicshop/wrappers/factw/: config_install.py  fact_config.py  get_file_data.py  get_status.py  rest_binary_search.py  rest_file_object.py  rest_firmware.py  rest_router.py  rest_statistics.py  rest_status.py  upload_files.py  upload_firmware.py
atomicshop/wrappers/fibratusw/: install.py
atomicshop/wrappers/loggingw/: checks.py  consts.py  filters.py  formatters.py  handlers.py  loggers.py  loggingw.py  reading.py
atomicshop/wrappers/mongodbw/: infrastructure.py  install_mongodb.py  mongodbw.py  (+3 more)
setups/: upgrade_atomic.cmd
setups/callers/: install_PyCharm.cmd  install_PyCharm_as_admin.cmd  install_python_and_atomic_as_admin.cmd
setups/scripts/: install_PyCharm.cmd  install_PyCharm_as_admin.cmd  install_python_and_atomic_as_admin.cmd  upgrade_atomic.cmd
(+113 files in other folders)
