# Build systems for 'wheel' and 'setuptools' of version 61.0.0 and higher. Only in version 61 was introsuced full support for parsing 'pyproject.toml'.
[build-system]
requires = [
    "setuptools >= 61.0.0",
#    "wheel",
]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
## If you have several folders, you have to specify which one is the package.
#packages = ["atomicshop"]

#[tool.setuptools.packages]
#find = {}

[tool.setuptools.packages.find]
include = ["atomicshop*"]

# Getting verision from '__init__.py' of the 'atomicshop' package.
[tool.setuptools.dynamic]
version = {attr = "atomicshop.__version__"}

# While building, installing package add all non-python files from folder inside package: 'addons'. Workls recursively.
# Usage:
# import importlib.resources
# package_name = 'atomicshop.addons.folder_name'
# resource = 'file_name.py'
# destination = 'path/to/your/destination/folder/test.py'
# The 'resource_path' is a Path object.
# resource_path = importlib.resources.files(package_name) / resource
[tool.setuptools.package-data]
"atomicshop.addons" = ["**"]
"atomicshop.mains" = ["**"]
"atomicshop.installs" = ["**"]

[project]
# Name of the package.
name = "atomicshop"
# This is needed in order to get the 'version' variable from '[tool.setuptools.dynamic]' section.
dynamic = ["version"]
# Authors. 'email' section can be added for each author.
authors = [
  { name="Denis Kras" }
]
# Short description.
description = "Atomic functions and classes to make developer life easier"
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wheel",
    "beautifulsoup4",
    "cryptography",
    "dnslib",
    "dnspython",
    "docker",
    "flask_socketio",
    "google-api-python-client",
    "google-generativeai",
    "numpy",
    "olefile",
    "openpyxl",
    "pandas",
    "paramiko",
    "pefile",
    "playwright",
    "playwright-stealth",
    "protobuf",
    "psutil",
    "py7zr",
    "pyautogui",
	"pymongo",
    "pyopenssl",
    "python-bidi",
    "python-docx",
    "python-magic",
    "pywin32; platform_system == 'Windows'",
    "reportlab",
    "setuptools",
    "SoundCard",
    "soundfile",
    "SpeechRecognition",
    "tldextract",
    "websockets"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/BugSec-Official/atomicshop"