# Build systems for 'wheel' and 'setuptools' of version 61.0.0 and higher. Only in version 61 was introsuced full support for parsing 'pyproject.toml'.
[build-system]
requires = [
    "setuptools >= 61.0.0",
#    "wheel",
]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
## If you have several folders, you have to specify which one is the package.
#packages = ["atomicshop"]

#[tool.setuptools.packages]
#find = {}

[tool.setuptools.packages.find]
include = ["atomicshop*"]

# Getting verision from '__init__.py' of the 'atomicshop' package.
[tool.setuptools.dynamic]
version = {attr = "atomicshop.__version__"}

# While building, installing package add all non-python files from folder inside package: 'addons'. Workls recursively.
# Usage:
# import importlib.resources
# package_name = 'atomicshop.addons.folder_name'
# resource = 'file_name.py'
# destination = 'path/to/your/destination/folder/test.py'
# The 'resource_path' is a Path object.
# resource_path = importlib.resources.files(package_name) / resource
[tool.setuptools.package-data]
"atomicshop.a_mains" = ["**"]

#[project.entry-points."console_scripts"]
#pywintrace = "atomicshop.a_installs.pywintrace:main"

[project]
# Name of the package.
name = "atomicshop"
# This is needed in order to get the 'version' variable from '[tool.setuptools.dynamic]' section.
dynamic = ["version"]
# Authors. 'email' section can be added for each author.
authors = [
  { name="Denis Kras" }
]
# Short description.
description = "Atomic functions and classes to make developer life easier"
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "wheel==0.45.1",
    "setuptools==80.9.0",
    "beautifulsoup4==4.14.3",
    "cryptography==46.0.3",
    "dkarchiver==1.0.0",
    "dkinst",
    "dnslib==0.9.26",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "flask_socketio==5.5.1",
    "google-api-python-client==2.187.0",
    "google-genai==1.53.0",
    "icmplib==3.0.4",
    "numpy",
    "olefile==0.47",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "paramiko==4.0.0",
    "pefile==2024.8.26",
    "playwright==1.56.0",
    "psutil==7.1.3",
    "pymongo==4.15.5",
    "pyopenssl==25.3.0",
    "python-docx",
    "pywin32==311; platform_system == 'Windows'",
    "SoundCard",
    "soundfile",
    "SpeechRecognition",
    "tldextract==5.3.0",
    "websockets==15.0.1"
]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/BugSec-Official/atomicshop"